--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="deruos.com" />
+  <meta name="description" content="Welcome to deruos.com" />
   <title>deruos.com</title>
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://deruos.com/" />
+
+  <!-- Open Graph for social media sharing -->
+  <meta property="og:title" content="deruos.com" />
+  <meta property="og:description" content="Welcome to deruos.com" />
+  <meta property="og:url" content="https://deruos.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="data:,">
+
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
+  <!-- Force HTTPS if needed -->
+  <script>
+    if (location.protocol !== 'https:') {
+      location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+    }
+  </script>
+
+  <!-- Styles -->
   <style>
     body {
       margin: 0;
