--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="deruos.com" />
   <meta property="og:description" content="Welcome to deruos.com" />
   <meta property="og:url" content="https://deruos.com/" />
-  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary" />
 
   <!-- Favicon -->
   <link rel="icon" href="data:,">
