--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,10 +11,17 @@
   <meta property="og:title" content="deruos.com" />
   <meta property="og:description" content="Welcome to deruos.com" />
   <meta property="og:url" content="https://deruos.com/" />
-  <meta name="twitter:card" content="summary" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://deruos.com/logo.png" /> <!-- Replace if not used -->
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="deruos.com" />
+  <meta name="twitter:description" content="Welcome to deruos.com" />
+  <meta name="twitter:image" content="https://deruos.com/logo.png" /> <!-- Replace or remove -->
 
   <!-- Favicon -->
-  <link rel="icon" href="data:,">
+  <link rel="icon" href="https://deruos.com/favicon.ico" /> <!-- optional, or remove -->
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -49,7 +54,3 @@
     }
   </style>
 </head>
-<body>
-  <div class="header">deruos.com</div>
-</body>
-</html>
