--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,21 +14,21 @@
   <meta property="og:description" content="Welcome to deruos.com" />
   <meta property="og:url" content="https://deruos.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://deruos.com/logo.png" /> <!-- Replace if not used -->
+  <meta property="og:image" content="https://deruos.com/assets/deruos.webp" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="deruos.com" />
   <meta name="twitter:description" content="Welcome to deruos.com" />
-  <meta name="twitter:image" content="https://deruos.com/logo.png" /> <!-- Replace or remove -->
+  <meta name="twitter:image" content="https://deruos.com/assets/deruos.webp" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="https://deruos.com/favicon.ico" /> <!-- optional, or remove -->
+  <!-- Favicon (optional) -->
+  <link rel="icon" href="https://deruos.com/favicon.ico" />
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
-  <!-- Force HTTPS if needed -->
+  <!-- Force HTTPS -->
   <script>
     if (location.protocol !== 'https:') {
       location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
@@ -45,12 +47,28 @@
       padding: 1rem;
       font-weight: normal;
       font-size: 1.1rem;
+      text-align: center;
     }
 
-    @media (max-width: 600px) {
-      .header {
-        text-align: center;
-      }
+    .logo-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 3rem;
+    }
+
+    .logo-container img {
+      max-width: 200px;
+      width: 100%;
+      height: auto;
     }
   </style>
 </head>
+<body>
+  <div class="header">deruos.com</div>
+
+  <div class="logo-container">
+    <img src="assets/deruos.webp" alt="Deruos Logo" />
+  </div>
+</body>
+</html>
