--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div class="header">deruos.com</div>
 
   <div class="logo-container">
-    <img src="assets/deruos.webp" alt="Deruos Logo" />
+    <img src="https://deruos.com/assets/deruos.webp" alt="Deruos Logo" />
   </div>
 </body>
 </html>
