--- a/index.html
+++ b/index.html
@@ -2,73 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Welcome to deruos.com" />
   <title>deruos.com</title>
-
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://deruos.com/" />
-
-  <!-- Open Graph for social media sharing -->
-  <meta property="og:title" content="deruos.com" />
-  <meta property="og:description" content="Welcome to deruos.com" />
-  <meta property="og:url" content="https://deruos.com/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://deruos.com/assets/deruos.webp" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="deruos.com" />
-  <meta name="twitter:description" content="Welcome to deruos.com" />
-  <meta name="twitter:image" content="https://deruos.com/assets/deruos.webp" />
-
-  <!-- Favicon (optional) -->
-  <link rel="icon" href="https://deruos.com/favicon.ico" />
-
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-
-  <!-- Force HTTPS -->
-  <script>
-    if (location.protocol !== 'https:') {
-      location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-    }
-  </script>
-
-  <!-- Styles -->
-  <style>
-    body {
-      margin: 0;
-      background-color: #f9f9f9;
-      font-family: 'Inter', sans-serif;
-    }
-
-    .header {
-      padding: 1rem;
-      font-weight: normal;
-      font-size: 1.1rem;
-      text-align: center;
-    }
-
-    .logo-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 3rem;
-    }
-
-    .logo-container img {
-      max-width: 200px;
-      width: 100%;
-      height: auto;
-    }
-  </style>
 </head>
 <body>
-  <div class="header">deruos.com</div>
-
-  <div class="logo-container">
-    <img src="https://deruos.com/assets/deruos.webp" alt="Deruos Logo" />
-  </div>
+  <h1>Hello, world!</h1>
+  <img src="https://deruos.com/assets/deruos.webp" alt="logo" width="200" />
 </body>
 </html>
