--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
   <meta name="twitter:description" content="Welcome to deruos.com" />
   <meta name="twitter:image" content="https://deruos.com/assets/deruos.webp" />
 
-  <!-- Favicon (optional) -->
-  <link rel="icon" href="https://deruos.com/favicon.ico" />
+  <!-- Favicons and manifest (in /assets/) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+  <link rel="manifest" href="assets/site.webmanifest">
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -49,26 +52,9 @@
       font-size: 1.1rem;
       text-align: center;
     }
-
-    .logo-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 3rem;
-    }
-
-    .logo-container img {
-      max-width: 200px;
-      width: 100%;
-      height: auto;
-    }
   </style>
 </head>
 <body>
   <div class="header">deruos.com</div>
-
-  <div class="logo-container">
-    <img src="https://deruos.com/assets/deruos.webp" alt="Deruos Logo" />
-  </div>
 </body>
 </html>
