--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Canonical URL -->
   <link rel="canonical" href="https://deruos.com/" />
 
-  <!-- Open Graph for social media sharing -->
+  <!-- Open Graph for social sharing -->
   <meta property="og:title" content="deruos.com" />
   <meta property="og:description" content="Welcome to deruos.com" />
   <meta property="og:url" content="https://deruos.com/" />
@@ -22,7 +22,7 @@
   <meta name="twitter:description" content="Welcome to deruos.com" />
   <meta name="twitter:image" content="https://deruos.com/assets/deruos.webp" />
 
-  <!-- Favicons and manifest (in /assets/) -->
+  <!-- Favicons (in /assets/) -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
@@ -50,11 +50,11 @@
       padding: 1rem;
       font-weight: normal;
       font-size: 1.1rem;
-      text-align: center;
+      text-align: left; /* ✅ Make it align left */
     }
   </style>
 </head>
 <body>
-  <div class="header">deruos.com</div>
+  <div class="header">deruos.com</div> <!-- ✅ No more image below -->
 </body>
 </html>
