--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
   <!-- Canonical URL -->
   <link rel="canonical" href="https://deruos.com/" />
 
-  <!-- Open Graph for social sharing -->
+  <!-- Open Graph (no image for now) -->
   <meta property="og:title" content="deruos.com" />
   <meta property="og:description" content="Welcome to deruos.com" />
   <meta property="og:url" content="https://deruos.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://deruos.com/assets/deruos.webp" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
+  <!-- Twitter Card (no image for now) -->
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="deruos.com" />
   <meta name="twitter:description" content="Welcome to deruos.com" />
-  <meta name="twitter:image" content="https://deruos.com/assets/deruos.webp" />
 
-  <!-- Favicons (in /assets/) -->
+  <!-- Favicons (make sure these files are in the /assets folder) -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
@@ -50,11 +48,11 @@
       padding: 1rem;
       font-weight: normal;
       font-size: 1.1rem;
-      text-align: left; /* ✅ Make it align left */
+      text-align: left;
     }
   </style>
 </head>
 <body>
-  <div class="header">deruos.com</div> <!-- ✅ No more image below -->
+  <div class="header">deruos.com</div>
 </body>
 </html>
